@@ -37,6 +37,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
     - Fixed ticket #904: Win32 taskbar icon is only 16x16 (Windows 7 may uses
       48x48) (AZAWAWI)
     - Improved messages in the Refactoring dialogs (Zeno Gantner)
+    - New document statistics dialog (Zeno Gantner)
 
 0.58 2010.03.08  **WARNING Still not stable**
     - Fixed "Open File In Existing Padre" for non-win32 (PDONELAN)
